Update: Simplified Chinese Translation

--- a/lang/simplified_chinese.lng
+++ b/lang/simplified_chinese.lng
@@ -1,9 +1,7 @@
 ##grflangid 0x56
 
-lang: 7F
-
 STR_GRF_NAME :JP+ 机车与车厢 {VERSION}
-STR_GRF_DESCRIPTION :{RED}注意!{SILVER} 必须在 JapanSet3: Trains 之后加载以工作!{}{}{WHITE}JP{RED}+{WHITE}机车与车厢{BLACK}：{WHITE}JP{RED}+{BLACK}系列的一部分，主要包含来自日本铁道省、日本国有铁道、JR集团各公司与其他私铁的机车与车厢，并提供多种涂装样式{}{}{TINYFONT}原始图像由{SILVER} Emperor Jake, Voyager One, Davo H., wicket-303, SaYa, Azusa, Erato, andythenorth 与 JapanSet团队{BLACK}绘制{}GRF 由{SILVER} Emperor Jake {BLACK}编制 {}{COPYRIGHT} 2023 GPLv2+
+STR_GRF_DESCRIPTION :{WHITE}JP{RED}+{WHITE}机车与车厢{BLACK}：{WHITE}JP{RED}+{BLACK}系列的一部分，主要包含来自日本铁道省、日本国有铁道、JR集团各公司与其他私铁的机车与车厢，并提供多种涂装样式{}{}{TINYFONT}原始图像由{SILVER} Emperor Jake、Voyager One、Davo H.、wicket-303、SaYa、Azusa、Erato、andythenorth 与 JapanSet团队{BLACK}绘制{}GRF 由{SILVER} Emperor Jake {BLACK}编制 {}{COPYRIGHT} 2023 GPLv2+
 
 STR_PARAM_NAME_BASECOSTMODBUY	:购买费用
 STR_PARAM_DESC_BASECOSTMODBUY	:调整机车与车厢购买费用以与 Japan Set 相匹配
@@ -20,29 +18,66 @@ STR_PARAM_NORMAL	:普通
 STR_PARAM_HIGH		:高
 STR_PARAM_VHIGH		:非常高
 
-STR_ERROR_JAPANSETTRAINS_LOADORDER	:必须在 JapanSet 3 Trains 之后加载!
-STR_ERROR_JAPANSETTRAINS_REQUIRES	:JP+ 机车与车厢需要 JapanSet 3 Trains以工作!
-STR_ERROR_JAPANSETTRAINS	:JapanSet 3 Trains
+STR_NAME_150	    :150
+STR_NAME_860	    :860
+STR_NAME_1070	    :1070
+STR_NAME_1800	    :1800
+STR_NAME_2100	    :2100
+STR_NAME_C11	    :C11
+STR_NAME_C12	    :C12
+STR_NAME_E10        :E10
 
-STR_ERROR_JPPLUSSET			:必须在 JP+ Set 之后加载!
-
-
+STR_NAME_5000	    :5000
+STR_NAME_7010	    :7010
+STR_NAME_7050	    :7050
+STR_NAME_5130	    :5130
+STR_NAME_5500	    :5500
+STR_NAME_B1	        :B1
 STR_NAME_7100	    :7100
 STR_NAME_7200	    :7200
-STR_NAME_860	    :860
-STR_NAME_7050	    :7050 C-1
+
+STR_NAME_8620	    :8620
+STR_NAME_8620_R	    :8620（翻转）
+STR_NAME_8700	    :8700
+STR_NAME_C53        :C53
+STR_NAME_C53_S      :C53（流线型）
+STR_NAME_C57	    :C57
+STR_NAME_C58        :C58
+STR_NAME_C58_R      :C58（翻转）
+STR_NAME_C62        :C62
+
+STR_NAME_9600	    :9600
+STR_NAME_9600_R	    :9600（翻转）
+STR_NAME_9700	    :9700
+STR_NAME_9750	    :9750
+STR_NAME_D50        :D50
+STR_NAME_D50_R      :D50（翻转）
+STR_NAME_D51        :D51
+STR_NAME_D51_R      :D51（翻转）
+STR_NAME_D52        :D52
+STR_NAME_D52_R      :D52（翻转）
+STR_NAME_D62        :D62
+STR_NAME_D62_R      :D62（翻转）
 
 STR_NAME_DF50	    :DF50
+STR_NAME_DD11	    :DD11
 STR_NAME_DD13	    :DD13
+STR_NAME_DD13_1	    :DD13（旧型号）
+STR_NAME_DD13_2	    :DD13（新型号）
 STR_NAME_DD16	    :DD16
 STR_NAME_DD54	    :DD54
 STR_NAME_DE10       :DE10
+STR_NAME_DE11       :DE11
+STR_NAME_DE11_1     :DE11-0
+STR_NAME_DE11_2     :DE11-2000
+STR_NAME_DE15       :DE15
+STR_NAME_DE15_P     :DE15（除雪单元）
 STR_NAME_DD51       :DD51
 STR_NAME_DF200      :DF200
 STR_NAME_DF200_1     :DF200-0
 STR_NAME_DF200_2     :DF200-100 / -200
 STR_NAME_DF200_P     :DF200-901（试作机）
-STR_NAME_DF200_7     :DF200-7000 {GOLD}（九州七星）{BLACK}
+STR_NAME_DF200_7     :DF200-7000{GOLD}（九州七星）{BLACK}
 STR_NAME_HD300      :HD300
 
 STR_NAME_AB10	:AB10
@@ -57,11 +92,11 @@ STR_NAME_ED54	:ED54
 STR_NAME_ED55	:ED55
 
 STR_NAME_EF10	:EF10
-STR_NAME_EF10_1	:EF10 旧型号
-STR_NAME_EF10_2	:EF10 新型号
+STR_NAME_EF10_1	:EF10（旧型号）
+STR_NAME_EF10_2	:EF10（新型号）
 STR_NAME_EF13	:EF13
-STR_NAME_EF13_1	:EF13 旧型号
-STR_NAME_EF13_2	:EF13 新型号
+STR_NAME_EF13_1	:EF13（旧型号）
+STR_NAME_EF13_2	:EF13（新型号）
 STR_NAME_EF15	:EF15
 STR_NAME_EF16	:EF16
 STR_NAME_EF18	:EF18
@@ -71,79 +106,79 @@ STR_NAME_EF53	:EF53
 STR_NAME_EF55	:EF55
 STR_NAME_EF56	:EF56
 STR_NAME_EF57	:EF57
-STR_NAME_EF57_2	:EF57 原型机
+STR_NAME_EF57_2	:EF57（原型机）
 STR_NAME_EF58	:EF58
-STR_NAME_EF58_1 :EF58 新型号
-STR_NAME_EF58_2	:EF58 旧型号
+STR_NAME_EF58_1 :EF58（新型号）
+STR_NAME_EF58_2	:EF58（旧型号）
 
 STR_NAME_EF59	:EF59
-STR_NAME_EF59_1	:EF59-1 补机
-STR_NAME_EF59_2	:EF59-20 补机
+STR_NAME_EF59_1	:EF59-1（补机）
+STR_NAME_EF59_2	:EF59-20（补机）
 
-STR_NAME_EH10	:EH10 
-STR_NAME_EH10_2	:EH10 原型机 
-STR_NAME_EH50	:EH50 
+STR_NAME_EH10	:EH10
+STR_NAME_EH10_2	:EH10（原型机）
+STR_NAME_EH50	:EH50
 
-STR_NAME_ED60	:ED60 
-STR_NAME_ED61	:ED61 
-STR_NAME_ED62	:ED62 
-STR_NAME_ED63	:ED63 概念机
+STR_NAME_ED60	:ED60
+STR_NAME_ED61	:ED61
+STR_NAME_ED62	:ED62
+STR_NAME_ED63	:ED63（概念机）
 
 STR_NAME_EF60   :EF60
-STR_NAME_EF60_0	:EF60 原型机 
-STR_NAME_EF60_1	:EF60 旧型号
-STR_NAME_EF60_2	:EF60 新型号 
+STR_NAME_EF60_0	:EF60（原型机）
+STR_NAME_EF60_1	:EF60（旧型号）
+STR_NAME_EF60_2	:EF60（新型号）
 STR_NAME_EF62	:EF62
-STR_NAME_EF62_0	:EF62 原型机
-STR_NAME_EF63	:EF63 
+STR_NAME_EF62_0	:EF62（原型机）
+STR_NAME_EF63	:EF63
 STR_NAME_EF64	:EF64
-STR_NAME_EF64_1	:EF64-0 
-STR_NAME_EF64_2	:EF64-1000 
+STR_NAME_EF64_1	:EF64-0
+STR_NAME_EF64_2	:EF64-1000
 
 STR_NAME_EF65   :EF65
-STR_NAME_EF65_1	:EF65-0 
-STR_NAME_EF65_2	:EF65-500 
-STR_NAME_EF65_3	:EF65-1000 
+STR_NAME_EF65_1	:EF65-0
+STR_NAME_EF65_2	:EF65-500
+STR_NAME_EF65_3	:EF65-1000
 
 STR_NAME_EF66	:EF66
-STR_NAME_EF66_1	:EF66-0 
-STR_NAME_EF66_2	:EF66-100 
-STR_NAME_EF66_3	:EF66-2000 概念机
+STR_NAME_EF66_1	:EF66-0
+STR_NAME_EF66_2	:EF66-100
+STR_NAME_EF66_3	:EF66-2000（概念机）
 
 STR_NAME_EF67	:EF67
-STR_NAME_EF67_1	:EF67-0 补机 
-STR_NAME_EF67_2	:EF67-100 补机 
+STR_NAME_EF67_1	:EF67-0（补机）
+STR_NAME_EF67_2	:EF67-100（补机）
 
 STR_NAME_ED46   :ED46
-STR_NAME_EF30	:EF30 
-STR_NAME_EF30_1	:EF30 原型机
-STR_NAME_EF80	:EF80 
-STR_NAME_EF81	:EF81 
+STR_NAME_EF30	:EF30
+STR_NAME_EF30_1	:EF30（原型机）
+STR_NAME_EF80	:EF80
+STR_NAME_EF81	:EF81
 STR_NAME_EF81_0	:EF81-0
-STR_NAME_EF81_1	:EF81-300 
-STR_NAME_EF81_2	:EF81-450 
+STR_NAME_EF81_1	:EF81-300
+STR_NAME_EF81_2	:EF81-450
 
-STR_NAME_ED70	:ED70 
-STR_NAME_ED75	:ED75 
+STR_NAME_ED70	:ED70
+STR_NAME_ED75	:ED75
 STR_NAME_ED75_0	:ED75-0
 STR_NAME_ED75_1	:ED75-0 / -1000
-STR_NAME_ED75_2	:ED75-700 
-STR_NAME_ED76	:ED76 
+STR_NAME_ED75_2	:ED75-700
+STR_NAME_ED76	:ED76
 STR_NAME_ED76_0	:ED76-0 / -1000
 STR_NAME_ED76_1	:ED76-500
 STR_NAME_ED76_2	:ED76-550
-STR_NAME_ED79	:ED79 
-STR_NAME_EF70	:EF70 
-STR_NAME_EF70_1	:EF70 旧型号
-STR_NAME_EF70_2	:EF70 新型号
+STR_NAME_ED79	:ED79
+STR_NAME_EF70	:EF70
+STR_NAME_EF70_1	:EF70（旧型号）
+STR_NAME_EF70_2	:EF70（新型号）
 STR_NAME_EF71	:EF71
 
-STR_NAME_EF200	    :EF200 
-STR_NAME_EF200_P    :EF200 原型机
+STR_NAME_EF200	    :EF200
+STR_NAME_EF200_P    :EF200（原型机）
 STR_NAME_EF210	    :EF210
-STR_NAME_EF210_0	:EF210-0 
+STR_NAME_EF210_0	:EF210-0
 STR_NAME_EF210_1	:EF210-100
-STR_NAME_EF210_2	:EF210-300 补机
+STR_NAME_EF210_2	:EF210-300（补机）
 STR_NAME_EH200  	:EH200
 
 STR_NAME_ED500	    :ED500
@@ -153,9 +188,9 @@ STR_NAME_EF510_0	:EF510-0
 STR_NAME_EF510_5	:EF510-500
 STR_NAME_EF510_3	:EF510-300
 STR_NAME_EH500  	:EH500
-STR_NAME_EH500_P	:EH500 原型机
-STR_NAME_EH500_1	:EH500 旧型号
-STR_NAME_EH500_2	:EH500 新型号
+STR_NAME_EH500_P	:EH500（原型机）
+STR_NAME_EH500_1	:EH500（旧型号）
+STR_NAME_EH500_2	:EH500（新型号）
 STR_NAME_EH800	    :EH800
 STR_NAME_M250	    :M250 货物动车组
 
@@ -172,16 +207,16 @@ STR_NAME_PAX_OHA31		:OHA 31 客车
 STR_NAME_PAX_SUHA32		:SUHA 32 客车
 STR_NAME_PAX_OHA35		:OHA 35 客车
 STR_NAME_PAX_SUHA43		:SUHA 43 客车
-STR_NAME_PAX_SUHA44		:SUHA 43 {GOLD}"东海道（青大将）"{BLACK}
+STR_NAME_PAX_SUHA44		:SUHA 43{GOLD}“东海道（青大将）”{BLACK}
 STR_NAME_SLEEPER_10		:10 系客车
 STR_NAME_PASSENGER_12	:12 系客车
 STR_NAME_PASSENGER_24	:24 系卧铺车
 STR_NAME_PASSENGER_50	:50 系客车
-STR_NAME_PAX_50_5000	:50 系 5000 番台 {GOLD}"海峡快速"{BLACK}
+STR_NAME_PAX_50_5000	:50 系 5000 番台{GOLD}“海峡快速”{BLACK}
 
-STR_NAME_PAX_26			:E26 系 {GOLD}"仙后座"{BLACK}
-STR_NAME_PAX_77			:77 系 {GOLD}"七星号"{BLACK}
-STR_NAME_JOYFUL_12		:12 系 {GOLD}"Joyful Train"{BLACK}
+STR_NAME_PAX_26			:E26 系{GOLD}“仙后座”{BLACK}
+STR_NAME_PAX_77			:77 系{GOLD}“七星号”{BLACK}
+STR_NAME_JOYFUL_12		:12 系{GOLD}“Joyful Train”{BLACK}
 
 STR_NAME_MAIL_HANI1		:HANI 1 行包车
 STR_NAME_MAIL_KONI_8890	:KONI 8890 行包车
@@ -409,10 +444,9 @@ STR_NAME_KOKI_5500		:KOKI 5500 集装箱平车
 STR_NAME_KOKI_10000		:KOKI 10000 集装箱平车
 STR_NAME_KOKIFU_10000	:KOKIFU 10000 集装箱平车（带车掌室）
 STR_NAME_KOKI_50000		:KOKI 50000 集装箱平车
-STR_NAME_KOKIFU_50000    :KOKIFU 50000 集装箱平车（带车掌室）
+STR_NAME_KOKIFU_50000   :KOKIFU 50000 集装箱平车（带车掌室）
 STR_NAME_KOKI_250000	:KOKI 250000 集装箱平车
 STR_NAME_KOKI_100		:KOKI 100 集装箱平车
-STR_NAME_CONTAINER		:KOKI 101 集装箱平车
 STR_NAME_M250_TRAILER   :T260 货物动车组拖车
 STR_NAME_ROADRAILER		:WA 100 双模式拖车
 
@@ -434,7 +468,8 @@ STR_NAME_HOKI_1000      :HOKI 1000 带盖漏斗车
 STR_NAME_HOKI_2200      :HOKI 2200 粮食漏斗车
 STR_NAME_HOKI_2500      :HOKI 2500 / 9500 带盖漏斗车
 STR_NAME_HOKI_5700      :HOKI 5700 / 7500 带盖漏斗车
-STR_NAME_HOKI_8300      :HOKI 8300 / 9300 带盖漏斗车
+STR_NAME_HOKI_8300      :HOKI 8300 带盖漏斗车
+STR_NAME_HOKI_9300      :HOKI 9300 带盖漏斗车
 STR_NAME_HOKI_8500      :HOKI 8500 漏斗车
 STR_NAME_HOKI_10000     :HOKI 10000 漏斗车
 
@@ -472,31 +507,44 @@ STR_NAME_YO_9000		:YO 9000 守车
 
 STR_SUFFIX_JGR			:{WHITE}日本铁道省
 STR_SUFFIX_JNR			:{WHITE}日本国有铁道
-STR_SUFFIX_JRF			:{WHITE}JR货物
-STR_SUFFIX_JRE			:{WHITE}JR东日本
-STR_SUFFIX_JRC			:{WHITE}JR东海
-STR_SUFFIX_JRW			:{WHITE}JR西日本
-STR_SUFFIX_JRS			:{WHITE}JR四国
-STR_SUFFIX_JRK			:{WHITE}JR九州
-STR_SUFFIX_JRH			:{WHITE}JR北海道
-STR_SUFFIX_JR			:{WHITE}JR集团
+STR_SUFFIX_JRF			:{WHITE}JR 货物
+STR_SUFFIX_JRE			:{WHITE}JR 东日本
+STR_SUFFIX_JRC			:{WHITE}JR 东海
+STR_SUFFIX_JRW			:{WHITE}JR 西日本
+STR_SUFFIX_JRS			:{WHITE}JR 四国
+STR_SUFFIX_JRK			:{WHITE}JR 九州
+STR_SUFFIX_JRH			:{WHITE}JR 北海道
+STR_SUFFIX_JR			:{WHITE}JR 集团
 
 STR_SUFFIX_AICHI		:{WHITE}爱知电气铁道
 STR_SUFFIX_MEITETSU		:{WHITE}名古屋铁道
-STR_SUFFIX_HCC			:{WHITE}北海道炭矿铁道
+STR_SUFFIX_HCC			:{WHITE}官营幌内铁道
+STR_SUFFIX_TOBU 		:{WHITE}东武铁道
 STR_SUFFIX_OIGAWA       :{WHITE}大井川铁道
 STR_SUFFIX_SEIBU        :{WHITE}西武铁道
 STR_SUFFIX_SAKHALIN     :{WHITE}萨哈林铁道
 STR_SUFFIX_SAGANO       :{WHITE}嵯峨野观光铁道
 STR_SUFFIX_WATARASE     :{WHITE}渡良濑川溪谷铁道
 STR_SUFFIX_KANSAI		:{WHITE}关西铁道
-STR_SUFFIX_ASAHIKAWA        :{WHITE}旭川通运
+STR_SUFFIX_TARUMI       :{WHITE}樽见铁道
+STR_SUFFIX_ASAHIKAWA		:{WHITE}日本通运旭川
 STR_SUFFIX_AKITA_RINKAI     :{WHITE}秋田临海铁道
-STR_SUFFIX_TOMAKOMAI        :{WHITE}苫小牧港开发
+STR_SUFFIX_TOMAKOMAI        :{WHITE}苫小牧港开发线
 STR_SUFFIX_NAGOYA_RINKAI    :{WHITE}名古屋临海铁道
 STR_SUFFIX_KOSAKA           :{WHITE}小坂铁道
 STR_SUFFIX_KAMIOKA          :{WHITE}神冈铁道
 STR_SUFFIX_KASHIMA          :{WHITE}鹿岛临海铁道
+STR_SUFFIX_NIIGATA_RINKAI	:{WHITE}新潟临海铁道
+STR_SUFFIX_OHMI         	:{WHITE}近江铁道
+STR_SUFFIX_OKAYAMA_RINKO   	:{WHITE}冈山临港铁道
+STR_SUFFIX_HACHINOHE_RINKAI	:{WHITE}八户临海铁道
+STR_SUFFIX_KEIYO_RINKAI 	:{WHITE}京叶临海铁道
+STR_SUFFIX_SENDAI_RINKAI 	:{WHITE}仙台临海铁道
+STR_SUFFIX_KANAGAWA_RINKAI 	:{WHITE}神奈川临海铁道
+STR_SUFFIX_MITSUBISHI   	:{WHITE}三菱夕张
+STR_SUFFIX_FUKUSHIMA_RINKAI :{WHITE}福岛临海铁道
+STR_SUFFIX_TAMOURA          :{WHITE}田村港铁道
+STR_SUFFIX_SUMITOMO         :{WHITE}住友小仓工厂
 
 STR_SUFFIX_PRIVATE		:{WHITE}其他私有铁路
 
@@ -510,6 +558,8 @@ STR_SUFFIX_MILW         :{WHITE}密尔沃基铁路
 STR_SUFFIX_PRR          :{WHITE}宾州铁路
 STR_SUFFIX_MPL          :{WHITE}密苏里太平洋铁路
 STR_SUFFIX_AMTRAK       :{WHITE}美国国家铁路
+
+STR_SUFFIX_GE999        :{WHITE}银河铁道 999
 
 
 #####################
@@ -527,42 +577,50 @@ STR_REFIT_RANDOM      :{BLACK} - {GREEN}随机{BLACK}
 STR_REFIT_AUTOFORM    :{BLACK} - {GREEN}自动编组{BLACK}
 
 
-STR_REFIT_AUTOYEAR    : {GREEN}随机 {BLACK} -  自动更新
-STR_REFIT_RANDYEAR    : {GREEN}随机 {BLACK} -  年份相关
+STR_REFIT_AUTOYEAR    : {GREEN}随机{BLACK} - 自动更新
+STR_REFIT_RANDYEAR    : {GREEN}随机{BLACK} - 年份相关
 
 
-STR_REFIT_YEARFORM    : {GREEN}自动编组 {BLACK} -  年份相关
+STR_REFIT_YEARFORM    : {GREEN}自动编组{BLACK} - 年份相关
 
 
 # Named Trains
 # TOKAIDO（东海道）实际为スハ43的青大将涂装
-STR_SUFFIX_IMPERIAL       :{GOLD}"御召列车"{BLACK}
-STR_SUFFIX_EXPRESS        :{GOLD}"急行"{BLACK}
-STR_SUFFIX_PARCELS        :{GOLD}"急行行包"{BLACK}
-STR_SUFFIX_YUYU           :{GOLD}"ゆうゆうサロン岡山，悠悠沙龙冈山"{BLACK}
-STR_SUFFIX_EUROLINER      :{GOLD}"ユーロライナー，欧洲快线"{BLACK}
-STR_SUFFIX_TOKKYU         :{GOLD}"特急"{BLACK}
-STR_SUFFIX_TOKAIDO        :{GOLD}"东海道（青大将）"{BLACK}
-STR_SUFFIX_RAINBOW        :{GOLD}"スーパーエクスプレスレインボー，超级彩虹特快"{BLACK}
-STR_SUFFIX_TWILIGHT       :{GOLD}"トワイライトエクスプレス，日暮特快"{BLACK}
-STR_SUFFIX_HOKUTOSEI      :{GOLD}"北斗星"{BLACK}
-STR_SUFFIX_CASSIOPEIA     :{GOLD}"カシオペア，仙后座"{BLACK}
-STR_SUFFIX_AKEBONO        :{GOLD}"あけぼのオリエントサルーン，东方沙龙"{BLACK}
-STR_SUFFIX_SOUTHERNCROSS  :{GOLD}"サザンクロス，南十字星"{BLACK}
-STR_SUFFIX_AMERICANTRAIN  :{GOLD}"アメリカントレイン，美国列车"{BLACK}
-STR_SUFFIX_YASURAGI       :{GOLD}"やすらぎ，安宁"{BLACK}
-STR_SUFFIX_7STARS         :{GOLD}"ななつ星 in 九州，九州七星"{BLACK}
-STR_SUFFIX_SALONEXP       :{GOLD}"サロンエクスプレス東京，沙龙特快东京"{BLACK}
+STR_SUFFIX_IMPERIAL       :{GOLD}“御召列车”{BLACK}
+STR_SUFFIX_EXPRESS        :{GOLD}“急行”{BLACK}
+STR_SUFFIX_PARCELS        :{GOLD}“急行行包”{BLACK}
+STR_SUFFIX_YUYU           :{GOLD}“ゆうゆうサロン岡山，悠悠沙龙冈山”{BLACK}
+STR_SUFFIX_EUROLINER      :{GOLD}“ユーロライナー，欧洲快线”{BLACK}
+STR_SUFFIX_TOKKYU         :{GOLD}“特急”{BLACK}
+STR_SUFFIX_TOKAIDO        :{GOLD}“东海道（青大将）”{BLACK}
+STR_SUFFIX_RAINBOW        :{GOLD}“スーパーエクスプレスレインボー，超级彩虹特快”{BLACK}
+STR_SUFFIX_TWILIGHT       :{GOLD}“トワイライトエクスプレス，日暮特快”{BLACK}
+STR_SUFFIX_HOKUTOSEI      :{GOLD}“北斗星”{BLACK}
+STR_SUFFIX_CASSIOPEIA     :{GOLD}“カシオペア，仙后座”{BLACK}
+STR_SUFFIX_AKEBONO        :{GOLD}“あけぼのオリエントサルーン，东方沙龙”{BLACK}
+STR_SUFFIX_SOUTHERNCROSS  :{GOLD}“サザンクロス，南十字星”{BLACK}
+STR_SUFFIX_AMERICANTRAIN  :{GOLD}“アメリカントレイン，美国列车”{BLACK}
+STR_SUFFIX_YASURAGI       :{GOLD}“やすらぎ，安宁”{BLACK}
+STR_SUFFIX_7STARS         :{GOLD}“ななつ星 in 九州，九州七星”{BLACK}
+STR_SUFFIX_SALONEXP       :{GOLD}“サロンエクスプレス東京，沙龙特快东京”{BLACK}
+STR_SUFFIX_HYPERSALOON    :{GOLD}“ハイパーサルーン，超级沙龙”{BLACK}
 
-STR_SUFFIX_NOROKKO           :{GOLD}"ノロッコ，敞篷客车"{BLACK}
-STR_SUFFIX_ISLANDEXPRESS     :{GOLD}"アイランドエクスプレス，海岛特快"{BLACK}
-STR_SUFFIX_NOSTALGICVIEW     :{GOLD}"ノスタルジックビュー，怀旧景观"{BLACK}
-STR_SUFFIX_OKUIZUMO          :{GOLD}"奥出雲おろち号，奥出云大蛇号"{BLACK}
-STR_SUFFIX_KINOKUNI          :{GOLD}"きのくにシーサイド，紀伊国海滨号"{BLACK}
+STR_SUFFIX_NOROKKO           :{GOLD}“ノロッコ，敞篷客车”{BLACK}
+STR_SUFFIX_KUSHIRO           :{GOLD}“钏路”{BLACK}
+STR_SUFFIX_ROYAL_EXPRESS     :{GOLD}“北海道皇家特急”{BLACK}
 
-STR_SUFFIX_TSUBAME          :{GOLD}"つばめ，燕"{BLACK}
-STR_SUFFIX_HATO             :{GOLD}"はと，鸽"{BLACK}
-STR_SUFFIX_GINGA            :{GOLD}"银河"{BLACK}
+STR_SUFFIX_ISLANDEXPRESS     :{GOLD}“アイランドエクスプレス，海岛特快”{BLACK}
+STR_SUFFIX_NOSTALGICVIEW     :{GOLD}“ノスタルジックビュー，怀旧景观”{BLACK}
+STR_SUFFIX_OKUIZUMO          :{GOLD}“奥出雲おろち号，奥出云大蛇号”{BLACK}
+STR_SUFFIX_KINOKUNI          :{GOLD}“きのくにシーサイド，紀伊国海滨号”{BLACK}
+
+STR_SUFFIX_TSUBAME          :{GOLD}“つばめ，燕”{BLACK}
+STR_SUFFIX_HATO             :{GOLD}“はと，鸽”{BLACK}
+STR_SUFFIX_GINGA            :{GOLD}“银河”{BLACK}
+
+STR_SUFFIX_THOMAS            :{GOLD}“托马斯”{BLACK}
+STR_SUFFIX_JAMES             :{GOLD}“詹姆士”{BLACK}
+STR_SUFFIX_HIRO              :{GOLD}“ひろ”{BLACK}
 
 # Misc Suffixes
 
@@ -577,6 +635,10 @@ STR_SUFFIX_UPGRADE       :{BLACK}（升级）
 STR_SUFFIX_OLDSHAPE      :{BLACK}（旧型号）
 STR_SUFFIX_NEWSHAPE      :{BLACK}（新型号）
 STR_SUFFIX_REFURB        :{BLACK}（翻新）
+STR_SUFFIX_SMALLDEF	:{BLACK}（小烟板）
+STR_SUFFIX_SMOKEDEF	:{BLACK}（烟板）
+STR_SUFFIX_SEMISTREAM	:{BLACK}（半流线型）
+STR_SUFFIX_STREAMLINED	:{BLACK}（流线型）
 STR_SUFFIX_FLIPPED       :{BLACK}（翻转）
 STR_SUFFIX_NOLOGO        :{BLACK}（无标志）
 STR_SUFFIX_LOGO          :{BLACK}（标志）
@@ -584,6 +646,7 @@ STR_SUFFIX_LARGELOGO     :{BLACK}（大标志）
 STR_SUFFIX_REDLOGO       :{BLACK}（红标志）
 STR_SUFFIX_WHITELOGO     :{BLACK}（白标志）
 STR_SUFFIX_STRIPE        :{BLACK}（条纹）
+STR_SUFFIX_WARNSTRIPE   :{BLACK}（警告条纹）
 STR_SUFFIX_WHISKERS      :{BLACK}（胡须）
 STR_SUFFIX_2TONE         :{BLACK}（双色）
 STR_SUFFIX_SEMIFIC       :{BLACK}（半虚构）
@@ -608,7 +671,7 @@ STR_SUFFIX_INVERTER      :{BLACK}（逆变器高科技机车）{BLACK}
 STR_SUFFIX_HAMAMATSU     :{BLACK}（浜松工场）{BLACK}
 STR_SUFFIX_NAEBO         :{BLACK}（苗穂工场）{BLACK}
 STR_SUFFIX_CAMO          :{BLACK}（迷彩涂装）{BLACK}
-STR_SUFFIX_AIME          :{BLACK}（アイミー, Ai-Me）{BLACK}
+STR_SUFFIX_AIME          :{BLACK}（アイミー，Ai-Me）{BLACK}
 
 STR_SUFFIX_FOPEN         :（敞篷）
 STR_SUFFIX_FCOVER        :（有盖）
@@ -649,7 +712,7 @@ STR_COLOUR_PURPLE       :{PURPLE}紫色
 
 STR_REFIT_DMT_PROTO		: DMT 原型机
 STR_REFIT_DMT_SAGAWA    : 佐川
-STR_REFIT_DMT_JRF       : JR货物
+STR_REFIT_DMT_JRF       : JR 货物
 STR_REFIT_DMT_YAMATO    : 大和
 STR_REFIT_DMT_SEINO     : 西浓
 STR_REFIT_DMT_FUKUYAMA  : 福山
@@ -665,10 +728,11 @@ STR_DESC_POWER_DE 	       :{BLACK}动力方式：{GOLD}柴油电力{}
 STR_DESC_POWER_DH    	   :{BLACK}动力方式：{GOLD}柴油液压{}
 STR_DESC_POWER_HYBRID 	   :{BLACK}动力方式：{GOLD}柴油-电力混动{}
 STR_DESC_POWER_BATT		   :{BLACK}动力方式：{GOLD}电池组{}
-STR_DESC_POWER_AC20		   :{BLACK}动力方式：{GOLD}电力 - {RED} AC (20kV){}
-STR_DESC_POWER_DC15		   :{BLACK}动力方式：{GOLD}电力 - {BLUE} DC (1500V){}
-STR_DESC_POWER_MS20		   :{BLACK}动力方式：{GOLD}电力 - {RED} AC (20kV) {WHITE}/ {BLUE}DC (1500V){}
-STR_DESC_POWER_MS25 	   :{BLACK}动力方式：{GOLD}电力 - {RED} AC (20kV) {WHITE}/ {PURPLE} AC (25kV){}
+STR_DESC_POWER_AC20		   :{BLACK}动力方式：{GOLD}电力 - {RED}交流（20kV）{}
+STR_DESC_POWER_DC15		   :{BLACK}动力方式：{GOLD}电力 - {BLUE}直流（1500V）{}
+STR_DESC_POWER_MS20		   :{BLACK}动力方式：{GOLD}电力 - {RED}交流（20kV）{WHITE}或{BLUE}直流（1500V）{}
+STR_DESC_POWER_MS25 	   :{BLACK}动力方式：{GOLD}电力 - {RED}交流（20kV）{WHITE}或{PURPLE}交流（25kV）{}
+STR_DESC_POWER_NP          :{BLACK}动力方式：{GOLD}无动力 - {RED}需要其他机车提供动力{}
 
 STR_DESC_NARROWGAUGE	   :{BLACK}轨距：{GOLD}窄轨{SILVER}（1,067mm）{}
 STR_DESC_STDGAUGE	       :{BLACK}轨距：{GOLD}标准（1,435mm）{}
@@ -678,7 +742,7 @@ STR_DESC_WHEELS_B1         :{BLACK}轴式：{GOLD}1-C / 2-6-0{}
 STR_DESC_WHEELS_1B         :{BLACK}轴式：{GOLD}1-B / 2-4-0{}
 STR_DESC_WHEELS_1B1        :{BLACK}轴式：{GOLD}1-B-1 / 2-4-2{}
 STR_DESC_WHEELS_2B         :{BLACK}轴式：{GOLD}2-B / 4-4-0{}
-STR_DESC_WHEELS_2B1        :{BLACK}轴式：{GOLD}2-B / 4-4-2{}
+STR_DESC_WHEELS_2B1        :{BLACK}轴式：{GOLD}2-B-1 / 4-4-2{}
 STR_DESC_WHEELS_C          :{BLACK}轴式：{GOLD}C / 0-6-0{}
 STR_DESC_WHEELS_C1         :{BLACK}轴式：{GOLD}C-1 / 0-6-2{}
 STR_DESC_WHEELS_C2         :{BLACK}轴式：{GOLD}C-2 / 0-6-4{}
@@ -692,8 +756,8 @@ STR_DESC_WHEELS_1D         :{BLACK}轴式：{GOLD}1-D / 2-8-0{}
 STR_DESC_WHEELS_1D1        :{BLACK}轴式：{GOLD}1-D-1 / 2-8-2{}
 STR_DESC_WHEELS_1D2        :{BLACK}轴式：{GOLD}1-D-2 / 2-8-4{}
 
-STR_DESC_WHEELS_E          :{BLACK}轴式：{GOLD}1-C / 2-6-0{}
-STR_DESC_WHEELS_1E2        :{BLACK}轴式：{GOLD}1-C / 2-6-0{}
+STR_DESC_WHEELS_E        :{BLACK}轴式：{GOLD}E / 0-10-0{}
+STR_DESC_WHEELS_1E2      :{BLACK}轴式：{GOLD}1-E-2 / 2-10-4{}
 
 STR_DESC_WHEELS_1BB1       :{BLACK}轴式：{GOLD}1-B-B-1{}
 STR_DESC_WHEELS_BB         :{BLACK}轴式：{GOLD}B-B{}
@@ -718,6 +782,8 @@ STR_DESC_USAGE_EP		   :{BLACK}用途：{SILVER}特急客运{}
 STR_DESC_USAGE_EF		   :{BLACK}用途：{SILVER}特急客运 / 重载{}
 STR_DESC_USAGE_FF		   :{BLACK}用途：{SILVER}特急客运 / 高速货物{}
 STR_DESC_USAGE_BANK		   :{BLACK}用途：{SILVER}补机{}
+STR_DESC_USAGE_PLOWG	   :{BLACK}用途：{SILVER}除雪 / 一般{}
+STR_DESC_USAGE_PLOW		   :{BLACK}用途：{SILVER}除雪{}
 STR_DESC_USAGE_PROTO	   :{BLACK}用途：{SILVER}原型机{}
 STR_DESC_USAGE_CONCEPT	   :{BLACK}用途：{SILVER}概念机 / 虚构机{}
 
